--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,8 @@
   text-align: center;
 }
 
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +37,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+body {
+  font-family: "Roboto", sans-serif;
 }
